methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:28: error: not found: value c
    faireV(c:Color); forward; forward(); left(); forward(); 
           ^